# Skill-Evolution-Pipeline

./: .gitignore  11.md  ExecutionAnalysis字段分析报告.md  Skill Evolution Pipeline.md  agent-a01f608112c9c058a.jsonl  generate_analysis.py  merged_SKILL.md  proto_analysis字段分析报告.md
.claude/: settings.local.json
Self-Evolution-Pipeline/: .env  .gitignore  PIPELINE_SUMMARY.md  pyproject.toml
Self-Evolution-Pipeline/configs/: default.yaml
Self-Evolution-Pipeline/prompts/: evidence_analysis_system.txt  evidence_analysis_user.txt  evolution_derived.txt  evolution_fix.txt  evolution_system.txt  merge_polish_system.txt  merge_polish_user.txt  merge_resolve_system.txt  merge_resolve_user.txt
Self-Evolution-Pipeline/scripts/: mount_viking.sh
Self-Evolution-Pipeline/skill_evolution/: __init__.py  exceptions.py
Self-Evolution-Pipeline/skill_evolution/config/: __init__.py  constants.py  prompts.py  settings.py
Self-Evolution-Pipeline/skill_evolution/discovery/: __init__.py  skill_discovery.py
Self-Evolution-Pipeline/skill_evolution/evolution/: __init__.py  change_parser.py  patch.py
Self-Evolution-Pipeline/skill_evolution/extraction/: __init__.py  feedback_extractor.py  proto_extractor.py  session_extractor.py
Self-Evolution-Pipeline/skill_evolution/llm/: __init__.py  base.py  evidence_analyzer.py  evidence_builder.py  merge_engine.py  prompts.py  skill_evolver.py  tools.py
Self-Evolution-Pipeline/skill_evolution/models/: __init__.py  evolution.py  proto_analysis.py  session.py  skill.py
Self-Evolution-Pipeline/skill_evolution/pipeline/: __init__.py  cli.py  runner.py
Self-Evolution-Pipeline/skill_evolution/processing/: __init__.py  quality_filter.py  sampler.py
Self-Evolution-Pipeline/skill_evolution/recording/: __init__.py  recorder.py
Self-Evolution-Pipeline/skill_evolution/utils/: __init__.py  logging.py
Self-Evolution-Pipeline/tests/: PIPELINE_DATA_FLOW.md  __init__.py  conftest.py  test_change_parser.py  test_config.py  test_evidence_builder.py  test_exceptions.py  test_extraction.py  test_logging.py  test_merge_engine.py  test_models.py  test_processing.py  test_proto_extraction.py  test_tools.py
协议分析-agent/: index.json  (+2 more)
(+23 files in other folders)
