[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-evolution-pipeline"
version = "0.2.0"
description = "Skill Evolution Pipeline - intelligent skill evolution system with LLM-driven analysis"
readme = "PIPELINE_SUMMARY.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Skill Evolution Team"}
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.30.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "skill-evolution-pipeline[llm,dev]",
]

[project.urls]
Repository = "https://github.com/user/skill-evolution-pipeline"

[project.scripts]
skill-evolve = "skill_evolution.pipeline.runner:main"

[tool.setuptools]
packages = {find = {where = ["."], include = ["skill_evolution*"]}}

[tool.setuptools.package-data]
skill_evolution = [
    "configs/*.yaml",
    "prompts/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
